tests/033_type_checks.pirx
func random_number(): int {
  return 42;
}

func add(x: int, y: int): int {
  return x + y;
}

extern func main(): int {
	var x: int;
	x = "foo";
  2 + "foo";

  var s : string;
  s = x;
  s = random_number();

  add(1, "foo");
  add("foo", 2);

  !"foo";

  var flag: bool;
  flag = 1;
  flag = "foo";

  if 42 {
    printf("42 is boolean?\n");
  }

  while "true" {
    printf("what's the difference between a string and a bool?\n");
  }

	return 0;
}
